sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:15: error: not found: value plusPetitd
    	if (plusPetitd(getNombreValeurs()-j,getNombreValeurs()-j-1)) {
            ^